--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,14 +19,15 @@
 <body>
     <input type="datetime-local" id="startTime">
     <select id="interval">
-      <option value="1" selected>1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="15">15</option>
-      <option value="30">30</option>
-      <option value="60">60</option>
+        <option value="1" selected>1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="10">10</option>
+        <option value="15">15</option>
+        <option value="30">30</option>
+        <option value="60">60</option>
     </select>
     <button onclick="startReplay()">Start Replay</button>
     <button onclick="loadNextBar()">Next</button>
@@ -38,9 +39,11 @@
             return n.toString().padStart(2, '0');
         }
 
-        const now = new Date();
-        const formatted = `${now.getFullYear()}-${pad(now.getMonth() + 1)}-${pad(now.getDate())}T${pad(now.getHours())}:${pad(now.getMinutes())}`;
-        document.getElementById('startTime').value = formatted;
+        document.addEventListener('DOMContentLoaded', function() {
+            const now = new Date();
+            const formatted = `${now.getFullYear()}-${pad(now.getMonth() + 1)}-${pad(now.getDate())}T${pad(now.getHours())}:${pad(now.getMinutes())}`;
+            document.getElementById('startTime').value = formatted;
+        });
 
         const serverUrl = window.location.origin;
         const chart = LightweightCharts.createChart(document.getElementById('chart'), {
@@ -57,7 +60,7 @@
             }
         });
 
-        const series = chart.addSeries(LightweightCharts.CandlestickSeries, {
+    const series = chart.addSeries(LightweightCharts.CandlestickSeries, {
             upColor: '#35ce35',
             downColor: '#040404',
             borderVisible: true,
@@ -78,6 +81,14 @@
             series.setData(data);
             if (data.length > 0) {
                 lastTimestamp = data[data.length - 1].time;
+            }
+        }
+
+        async function refreshBars() {
+            const interval = getSelectedInterval();
+            if (interval > 1) {
+                const res = await fetch(`${serverUrl}/api/bars/${interval}/refresh`);
+                startReplay();
             }
         }
 
